deploy/kubernetes/prod/services.yml
apiVersion: v1
kind: Service
metadata:
  name: cwxgoweb
  namespace: cwx
spec:
  selector:
    app: cwxgoweb
  ports:
    - port: 80
      targetPort: 19002
    - port: 19003
      targetPort: 19003
