deploy/kubernetes/prod/IngressRoute.yml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cwxgoweb
  namespace: cwx
  annotations:
    kubernetes.io/ingress.class: "traefik-class"

spec:
  entryPoints:
    - https
  routes:
    - match: Host(`cwxgoweb.services.wait`)
      kind: Rule
      services:
        - name: cwxgoweb
          namespace: cwx
          port: 80
  tls:
    secretName: key-services-wait
